Tweaked the content within the layout, added a responsive set of four images. Fixed the responsiveness of the navbar. Edited spacing between elements.

--- a/flexGrid.css
+++ b/flexGrid.css
@@ -3,6 +3,7 @@
 	display: flex;
 	flex-wrap: nowrap;
 	flex-direction: column;
+	align-items: center;
 	justify-content: center;
 	text-align: center;
 }
@@ -15,7 +16,7 @@
 @media (min-width: 720px) {
 	.row {
 		flex-direction: row;
-		flex-wrap: nowrap;
+		align-items: flex-start;
 	}
 
 	.row-item {
