--- a/main.css
+++ b/main.css
@@ -8,12 +8,12 @@ body {
 }
 
 nav {
-  box-shadow: 10px 0 10px #C5CAE9;
   display: flex;
-  flex-direction: column;
-  background: #FFFFFF;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+  flex-direction: column;
+  box-shadow: 10px 0 10px #C5CAE9;
+  background: #FFFFFF;
   min-height: 8vh;
 }
 
@@ -21,10 +21,9 @@ nav {
   display: flex;
   flex-wrap: nowrap;
 }
-
 .link-wrapper a {
   text-decoration: none;
-  color: black;
+  color: #111;
   margin-right: 15px;
   font-size: 21px;
 }
@@ -40,8 +39,10 @@ h1 {
 }
 
 h2 {
+	font-weight: 500;
   font-size: 30px;
   color: #212121;
+
 }
 
 strong {
@@ -50,6 +51,7 @@ strong {
 
 }
 
+/* Color coded steps */
 h3 {
   font-size: 45px;
   font-weight: normal;
@@ -67,19 +69,24 @@ h3 {
 #red-bg {
   background-color: #3D8C00;
 }
+/******************************/
 
 p {
   font-size: 15px;
   line-height: 23px;
-  padding: 0 10% 0 10%;
+  padding: 0 8% 0 8%;
   color: #212121;
+}
+
+section {
+	border: 5px solid #efefef;
+	padding: 1% 0;
 }
 
 .jumbotron h2 {
   color: #FFFFFF;
   font-size: 33px;
-  padding: 20px;
-  margin: 0 6% 1% 6%;
+  line-height: 54px;
 }
 
 .jumbotron {
@@ -89,7 +96,6 @@ p {
   align-items: center;
   text-align: center;
   font-family: 'Roboto', sans-serif;
-  color: black;
   background-color: #50514F;
   padding: 4% 0 2% 0;
   margin: 0 0 30px 0;
@@ -97,7 +103,7 @@ p {
 }
 
 button {
-  margin: 4% 0 0 0;
+
   padding: 10px;
   border-radius: 10px;
   background-color: #E80000;
@@ -107,7 +113,7 @@ button {
   color: #FFFFFF;
 }
 form {
-  margin: 4% 0 0 0;
+  margin: 2% 0 0 0;
   padding: 10px;
   border-radius: 10px;
   background-color: #E80000;
@@ -120,4 +126,35 @@ hr {
     border: 0;
     height: 1px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(28, 37, 65, 0.5), rgba(0, 0, 0, 0));
+}
+
+.staff-images {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	padding: 1% 0;
+}
+
+.staff-images img {
+	max-width: 100%;
+}
+
+
+/* Page specific grid layout */
+
+.row {
+	margin: 0 0 1% 0;
+}
+
+/*****************************/
+
+@media (min-width: 720px) {
+	nav {
+  		flex-direction: row;
+		justify-content: space-between;
+	}
+
+	.staff-images img {
+		max-width: 50%;
+	}
 }
